kubernetes/Int/deployments/network/external-proxy/truenas-int/audiobookshelf.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: audiobookshelf
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: audiobookshelf
          port: 13378
          targetPort: 13378
    externalName: ENC[AES256_GCM,data:eG5weBqpboDUG3U=,iv:MEAsOzc3Mmh8YBGqs4M/+D/l0p6NEL7ZW81LY68PFO0=,tag:pDmW4n6FXBe9Z/ON9DeBCQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtNzUrZi85d3c2YitNcHk0
[...]
            Aq9gPhACbm9einicy9GlAdmNVZgo8TVzt+qVt5ZTzbCP00imzC2PrA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-02T13:12:00Z"
    mac: ENC[AES256_GCM,data:PeVauxfl9uvJ2exsnnJBQWiFXPvz5f1HQZCMW/wlIJMhi2lJG5iOWAOA8iT/Z4NiXxyLDSZJKBEiOQrrR344mFJpJSupmL9rOVGw6gbdkBj3lGEpqYtFN9Nyj75kHYHEqK6+jFrAmZ+b8djILULtd+G+P62P8EeK4UOdVRfe8PQ=,iv:HtsKai7ii8cNCvuUTWZ6ToPvSMlIqmSewO33JdLzsRA=,tag:iZvsgfOSP32qwFAZBWUPlg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: audiobookshelf
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:dz2iV1KwUqxjBBcr4j/subYIgIBK,iv:2NrmRb0q8iazIq6RJReHaIXWiyti4gHoiUXKsdWJb/M=,tag:Uuy5a4SD7NkO/vfTtPwNzw==,type:str]
          kind: Rule
          services:
            - name: audiobookshelf
              port: 13378
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtNzUrZi85d3c2YitNcHk0
[...]
            Aq9gPhACbm9einicy9GlAdmNVZgo8TVzt+qVt5ZTzbCP00imzC2PrA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-02T13:12:00Z"
    mac: ENC[AES256_GCM,data:PeVauxfl9uvJ2exsnnJBQWiFXPvz5f1HQZCMW/wlIJMhi2lJG5iOWAOA8iT/Z4NiXxyLDSZJKBEiOQrrR344mFJpJSupmL9rOVGw6gbdkBj3lGEpqYtFN9Nyj75kHYHEqK6+jFrAmZ+b8djILULtd+G+P62P8EeK4UOdVRfe8PQ=,iv:HtsKai7ii8cNCvuUTWZ6ToPvSMlIqmSewO33JdLzsRA=,tag:iZvsgfOSP32qwFAZBWUPlg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
