kubernetes/Int/deployments/network/external-proxy/truenas-int/audiobookshelf.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  type: ExternalName
  ports:
    - name: audiobookshelf
      port: 13378
      targetPort: 13378
  externalName: truenas.int.noms.tv
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: books.noms.tv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port: 
              number: 13378
