kubernetes/Int/deployments/network/external-proxy/truenas-int/deluge.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
spec:
  type: ExternalName
  ports:
    - name: deluge
      port: 8112
      targetPort: 8112
  externalName: 172.16.1.10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
spec:
  ingressClassName: nginx
  rules:
  - host: deluge.svc.noms.tv
    http:
      paths:
        path: /
        pathType: prefix
        backend:
          serviceName: deluge
          port: 8112
