kubernetes/Int/deployments/network/external-proxy/truenas-int/jellyfin.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: jellyfin
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: jellyfin
          port: 8096
          targetPort: 8096
    externalName: ENC[AES256_GCM,data:XTmJnFihrIrpw2A=,iv:uZFLSO09pxosAn+cquRgHUIJJmiMLCJpczAgca1O664=,tag:v0mp7zl4aHpX6+tp+Zt5Vg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjOEZQY1RmMkx3L21qUG1i
[...]
            BabnEKUJ4VzltHSRQdUQpL5yE1iicO5PAXWSPJyDFe1qcx6eFpqAWg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:20:43Z"
    mac: ENC[AES256_GCM,data:Fh6MjJ7/myCt/ZcdPHJDmSWYPz6KFNnCiKzjSuSPgFbeFeHqIU6xK5Wlr4oAJQg2LskabKhYQD7/AhJUIfpmHzEKVxsJT0RJWsJNHJalMjvjgUv2siauIeV/K6D3m0H5Nsr1dobZ9mmEv+E7ylH7LkyVQ4/V69whYDTZ/FJW0Qs=,iv:IO4qU/2f0gSQbjAnuLEEnOpfEV0lFFN7JZi9apstJKs=,tag:uUfUlUu2rOE1eZO+CHH6aw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: jellyfin
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:97NChHxnqE1mCJUKXnm8xV7ofDAmKrCD,iv:D9zlQWA5/cfYzesKm9hijeywnc2UqMqT7RcQPFlHI5I=,tag:VGC42xSXUwY3oP8nVzgucg==,type:str]
          kind: Rule
          services:
            - name: jellyfin
              port: 8096
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjOEZQY1RmMkx3L21qUG1i
[...]
            BabnEKUJ4VzltHSRQdUQpL5yE1iicO5PAXWSPJyDFe1qcx6eFpqAWg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:20:43Z"
    mac: ENC[AES256_GCM,data:Fh6MjJ7/myCt/ZcdPHJDmSWYPz6KFNnCiKzjSuSPgFbeFeHqIU6xK5Wlr4oAJQg2LskabKhYQD7/AhJUIfpmHzEKVxsJT0RJWsJNHJalMjvjgUv2siauIeV/K6D3m0H5Nsr1dobZ9mmEv+E7ylH7LkyVQ4/V69whYDTZ/FJW0Qs=,iv:IO4qU/2f0gSQbjAnuLEEnOpfEV0lFFN7JZi9apstJKs=,tag:uUfUlUu2rOE1eZO+CHH6aw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
