kubernetes/Int/deployments/network/external-proxy/truenas-int/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: ExternalName
  ports:
    - name: minio
      port: 9002
      targetPort: 9002
    - name: minio-s3
      port: 9000
      targetPort: 9000
  externalName: truenas.int.noms.tv
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: minio.noms.tv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port: 
              number: 9002
  - host: s3.noms.tv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port: 
              number: 9000
