kubernetes/Int/deployments/network/external-proxy/truenas-int/sabnzbd.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: sabnzbd
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: sabnzbd
          port: 8080
          targetPort: 8080
    externalName: ENC[AES256_GCM,data:fNSvhUgpRVz0ZQo=,iv:6WV8YpUHiOpa9VUEw7dwqAtrrUbCC2ev9bkv62z5d4A=,tag:qvoc0wLAG+mrk5K82c/s/w==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2WVVMclRlUExyeHhKTGVp
[...]
            ZqwszBWuZGo4QWqJ1Kct0Gh8AC2EjGHGKUkND8DsT+l72F6xiwTwhQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:20:07Z"
    mac: ENC[AES256_GCM,data:8vTCZHuvjn2iREpNOsNVQWdQxr4d5eak2APVCCrZeyrvoz33MocQQkOy4nZHkz1GqyBfY+rbX6DpWJfTzL8rK0KF9YwxCntT0zONnZWvLcZ5g4bkcB5RMyTNI7caCh/Mez57ccmE7WaMsn0RhQbH2b/XQhZEjhVfuw/8YRS4OsU=,iv:BOofpwr1HMCthfX0sQUpXQHtEpcCqe+rhfRv0XZCV3o=,tag:hocPeoSK2EGSTYscYHkQnQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: sabnzbd
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:uF+iVWA5lUn2tjGvt+tgFlVfv8AYHMYxI1WD,iv:EUP012DLLd8nzW4MhT/HASUzovDnTDtTzcsHFfn7Z0g=,tag:LPJ4s0AkoiuDHAwpiMpoRw==,type:str]
          kind: Rule
          services:
            - name: sabnzbd
              port: 8080
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2WVVMclRlUExyeHhKTGVp
[...]
            ZqwszBWuZGo4QWqJ1Kct0Gh8AC2EjGHGKUkND8DsT+l72F6xiwTwhQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-27T13:20:07Z"
    mac: ENC[AES256_GCM,data:8vTCZHuvjn2iREpNOsNVQWdQxr4d5eak2APVCCrZeyrvoz33MocQQkOy4nZHkz1GqyBfY+rbX6DpWJfTzL8rK0KF9YwxCntT0zONnZWvLcZ5g4bkcB5RMyTNI7caCh/Mez57ccmE7WaMsn0RhQbH2b/XQhZEjhVfuw/8YRS4OsU=,iv:BOofpwr1HMCthfX0sQUpXQHtEpcCqe+rhfRv0XZCV3o=,tag:hocPeoSK2EGSTYscYHkQnQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
