kubernetes/Int/deployments/network/external-proxy/truenas-int/sabnzbd.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  type: ExternalName
  ports:
    - name: sabnzbd
      port: 8080
      targetPort: 8080
  externalName: 172.16.1.10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
spec:
  ingressClassName: nginx
  rules:
  - host: sabnzbd.svc.noms.tv
    http:
      paths:
        path: /
        backend:
          serviceName: sabnzbd
          port: 8080
